Animations & layout fixed on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,24 @@ li {
   }
 }
 
+[data-aos=side-image-animation] {
+  opacity: 0;
+  transform: translateY(100px);
+  transition-property: transform, opacity;
+}
+[data-aos=side-image-animation].aos-animate {
+  opacity: 1;
+  transform: translateY(0);
+}
+@media screen and (min-width: 768px) {
+  [data-aos=side-image-animation] {
+    transform: translateX(100px);
+  }
+  [data-aos=side-image-animation].aos-animate {
+    transform: translateX(0);
+  }
+}
+
 /* Navbar Properties */
 .navbar-custom {
   background-color: #ffd4d9;
